# FusionAL

./: .gitignore  README.md  backbone_finetuner.py  data  environment.yml  extract_embeddings.py  models  muben  preprocess_unimol.py  pyproject.toml  results  run_al.py  surrogates.py
molpal/: explorer.py  featurizer.py  libraries
molpal/acquirer/: metrics.py
molpal/analysis/: __init__.py  criteria.py
molpal/models/: __init__.py  losses.py  molclrmodels.py  mvemodels.py
molpal/models/molclr/: model.py  predict.py
molpal/pools/: base.py
muben/: download_models.py  extract_embeddings.py  muben_env.yml  requirements.txt
muben/muben/dataset/: dataset.py
muben/muben/dataset/dataset_linear/: dataset.py
muben/muben/model/grover/: model.py
